@@ -76,10 +76,24 @@ jsch-0.1.14.</p>
     <td valian="top" align="center">Alternative to todir attribute.</td>
   </tr>
   <tr>
+    <td valign="top">localTofile</td>
+    <td valign="top">Changes the file name to the given name while
+    receiving it, only useful if receiving a single file.  <em>since
+    Ant 1.6.2</em></td>
+    <td valian="top" align="center">Alternative to todir attribute.</td>
+  </tr>
+  <tr>
     <td valign="top">remoteTodir</td>
     <td valign="top">This is an alternative to the todir
     attribute. But this must always point to a remote directory.
     <em>since Ant 1.6.2</em></td>
+    <td valian="top" align="center">Alternative to todir attribute.</td>
+  </tr>
+  <tr>
+    <td valign="top">remoteTofile</td>
+    <td valign="top">Changes the file name to the given name while
+    sending it, only useful if sending a single file.  <em>since
+    Ant 1.6.2</em></td>
     <td valian="top" align="center">Alternative to todir attribute.</td>
   </tr>
   <tr>
